--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ orcid_id: 0000-0002-3795-8381 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: AAP-3518-2021 # your ID on Publons
-research_gate_profile: https://www.researchgate.net/profile/Idris-Abdulmumin-2 # your profile on ResearchGate
+research_gate_profile: Idris-Abdulmumin-2 # your profile on ResearchGate
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
