--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ email: abumafrim@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   I am a Ph. D. Computer Science Candidate with Bayero University, Kano. My research is on "using monolingual data to improve the quality of low resource neural machine translation systems. My research interests are in the area of artificial intelligence, especially natural language processing."
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: abumafrim, idris, abdulmumin # add your own keywords or leave empty
 
@@ -71,8 +70,7 @@ wikidata_id: # your wikidata id
 dblp_url: https://dblp.org/pid/254/2143 # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
-contact_note: >
-  You can reach me at abumafrim@gmail.com, or for work related issues, you can reach me at iabdulmumin@abu.edu.ng. Thank you.
+contact_note: #You can reach me at abumafrim@gmail.com, or for work related issues, you can reach me at iabdulmumin@abu.edu.ng. Thank you.
 
 google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
 google_site_verification:  # your google-site-verification ID (Google Search Console)
