--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,70 +2,50 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Idris Abdulmumin
     - name: Date of Birth
-      value: 14th March 1879
+      value: 25th July 1991
     - name: Languages
-      value: English, German
+      value: Hausa, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Bayero University, Kano, Nigeria.
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Domain-aware Self-learning with Synthetic Data Transfer for Improved Back-translation in Low Resource Neural Machine Translation.
+    - title: MSc.
+      institution: Nottingham Trent University, Nottingham, UK.
+      year: 2017
       description:
-        - Description 1.
-        - Description 2.
+        - Web Application Security Analysis.
+    - title: BSc.
+      institution: Bayero University, Kano, Nigeria.
+      year: 2013
+      description:
+        - Plagiarism Checker, File Comparer and Project Library Software.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoctoral Fellow
+      institution: Data Science for Social Impact Research Group, University of Pretoria, South Africa.
+      year: 2023 - 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Developing resource-efficient language models for low-resource languages.
+    - title: Lecturer
+      institution: Ahmadu Bello University, Zaria, Nigeria.
+      year: 2017 - present
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Teaching CS, Research and Community Service.
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
+    - title: <a href="https://github.com/alshedivat/al-folio">SemRel SemEval</a>
+      year: 2013-2024
       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
