--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Abdulmumin
 email: abumafrim@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  I am a Ph. D. Computer Science Candidate with Bayero University, Kano. My research is on "using monolingual data to improve the quality of low resource neural machine translation systems. My research interests are in the area of artificial intelligence, especially natural language processing."
+  My name is Idris Abdulmumin, a Postdoctoral Fellow of the [Data Science for Social Impact Research Group](https://dsfsi.github.io/) at the University of Pretoria, under the supervision of Professor Vukosi Marivate. I am also a lecturer at the Department of Computer Science, Ahmadu Bello University, Zaria, Nigeria. I obtained my PhD in August 2023 under the supervision of Professor Bashir Shehu Galadanci at Bayero University Kano. My doctoral research focused on enhancing machine translation systems for low resource languages by harnessing the power of monolingual data.
 footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: abumafrim, idris, abdulmumin # add your own keywords or leave empty
