--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Idris Abdulmumin # the website title (if blank, full name will be used in
 first_name: Idris
 middle_name:
 last_name: Abdulmumin
-email: abumafrim@gmail.com
+email: idris.abdulmumin@up.ac.za
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   My name is Idris Abdulmumin, a Postdoctoral Fellow of the [Data Science for Social Impact Research Group](https://dsfsi.github.io/) at the University of Pretoria, under the supervision of Professor Vukosi Marivate. I am also a lecturer at the Department of Computer Science, Ahmadu Bello University, Zaria, Nigeria. I obtained my PhD in August 2023 under the supervision of Professor Bashir Shehu Galadanci at Bayero University Kano. My doctoral research focused on enhancing machine translation systems for low resource languages by harnessing the power of monolingual data.
 footer_text: >
@@ -14,7 +14,7 @@ footer_text: >
 keywords: abumafrim, idris, abdulmumin # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.png #⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://abumafrim.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
@@ -81,7 +81,7 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: iabdulmumin  # your blog must have a name for it to show up in the nav bar
+blog_name:  # your blog must have a name for it to show up in the nav bar
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
