--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Idris Abdulmumin # the website title (if blank, full name will be used instead)
+title: Dr. Idris Abdulmumin # the website title (if blank, full name will be used instead)
 first_name: Idris
 middle_name:
 last_name: Abdulmumin
