--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -41,37 +41,14 @@
       description:
         - Teaching CS, Research and Community Service.
 
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">SemRel SemEval</a>
-      year: 2013-2024
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://semantic-textual-relatedness.github.io/">SemRel SemEval</a>
+      year: 2023-2024
+      description: A semantic evaluation shared task on semantic textual relatedness for 14 languages, including 5 African languages.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
+- title: Others
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Research, Football.
