--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - abumafrim
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - abumafrim/WMT22-MasaKhane
+  - dsfsi/flores-fix-4-africa
+  - dsfsi/zasca-sum
