--- a/_config.yml
+++ b/_config.yml
@@ -124,12 +124,12 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: LinkedIn
-    rss_url: https://www.linkedin.com/company/dsfsi/posts/?feedView=all
   # - name: LinkedIn
-  #   posts:
-  #     - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-  #       published_date: 2024-05-14
+  #   rss_url: https://www.linkedin.com/company/dsfsi/posts/?feedView=all
+  - name: LinkedIn
+    posts:
+      - url: https://www.linkedin.com/embed/feed/update/urn:li:share:7324708613220921344
+        published_date: 2025-05-04
 
 # -----------------------------------------------------------------------------
 # Newsletter
